--- a/PetStore/PetStore.Web/Views/Shared/_LoginPartial.cshtml
+++ b/PetStore/PetStore.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using PetStore.Data.Models
+@inject SignInManager<StoreUser> SignInManager
+@inject UserManager<StoreUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
