Add and remove breeds implement

--- a/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
+++ b/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Brand" asp-action="All">All brands</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Breed" asp-action="Create">Add new breed</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Breed" asp-action="All">All breeds</a>
+                        </li>
                     </ul>
                 </div>
             </div>
