--- a/PetStore/PetStore.Web/Views/Brand/All.cshtml
+++ b/PetStore/PetStore.Web/Views/Brand/All.cshtml
@@ -1,5 +1,7 @@
 ﻿@model PetStore.Web.ViewModels.Brand.AllBrandsViewModel
 
+    <h3>List of all brands</h3>
+
 <table class="table table-bordered table-striped">
 
     @foreach (var item in Model.Brands)
