--- a/PetStore/PetStore.Web/Views/Breed/Create.cshtml
+++ b/PetStore/PetStore.Web/Views/Breed/Create.cshtml
@@ -1,8 +1,8 @@
-﻿@model PetStore.Web.ViewModels.Brand.CreateInputModel
-<h3>Add new brand</h3>
+﻿@model PetStore.Web.ViewModels.Breed.CreateInputModel
+<h3>Add new breed</h3>
 
 <div class="mx-auto w-50">
-    <form asp-controller="Brand" asp-action="Create" method="post">
+    <form asp-controller="Breed" asp-action="Create" method="post">
         <input asp-for="Name" type="text" class="form-control" placeholder="Add..." name="Name">
         <span asp-validation-for="Name" class="text-danger"></span>
         <hr />
