Add implementation for creating new categories

--- a/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
+++ b/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
@@ -11,28 +11,24 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PetStore</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Pet Store</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
+                    <select onChange="window.location.href=this.value">
+                        <option value="">Admin panel</option>
+                        <option value="/Brand/Create">Add new brand</option>
+                        <option value="/Brand/All">See all brands</option>
+                        <option value="/Breed/Create">Add new brand</option>
+                        <option value="/Breed/All">See all breeds</option>
+                        <option value="/Category/Create">Add new category</option>
+                    </select>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Brand" asp-action="Create">Add new brand</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Brand" asp-action="All">All brands</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Breed" asp-action="Create">Add new breed</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Breed" asp-action="All">All breeds</a>
                         </li>
                     </ul>
                 </div>
