Listing and deleting categories

--- a/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
+++ b/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                         <option value="/Breed/Create">Add new brand</option>
                         <option value="/Breed/All">See all breeds</option>
                         <option value="/Category/Create">Add new category</option>
+                        <option value="/Category/All">See all categories</option>
                     </select>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
