Add food service and fix some names

--- a/PetStore/PetStore.Web/Views/Brand/Create.cshtml
+++ b/PetStore/PetStore.Web/Views/Brand/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PetStore.Web.ViewModels.Brand.CreateInputModel
+﻿@model PetStore.Web.ViewModels.Brand.BrandCreateInputModel
 <h3>Add new brand</h3>
 
 <div class="mx-auto w-50">
