--- a/PetStore/PetStore.Web/Views/Breed/Create.cshtml
+++ b/PetStore/PetStore.Web/Views/Breed/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PetStore.Web.ViewModels.Breed.CreateInputModel
+﻿@model PetStore.Web.ViewModels.Breed.BreedCreateInputModel
 <h3>Add new breed</h3>
 
 <div class="mx-auto w-50">
