--- a/PetStore/PetStore.Web/Views/Category/Create.cshtml
+++ b/PetStore/PetStore.Web/Views/Category/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PetStore.Web.ViewModels.Category.CreateInputModel
+﻿@model PetStore.Web.ViewModels.Category.CategoryCreateInputModel
 <h3>Add new category</h3>
 
 <div class="mx-auto w-50">
