Implement listing and deleting foods

--- a/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
+++ b/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
@@ -22,10 +22,12 @@
                         <option value="">Admin panel</option>
                         <option value="/Brand/Create">Add new brand</option>
                         <option value="/Brand/All">See all brands</option>
-                        <option value="/Breed/Create">Add new brand</option>
+                        <option value="/Breed/Create">Add new breed</option>
                         <option value="/Breed/All">See all breeds</option>
                         <option value="/Category/Create">Add new category</option>
                         <option value="/Category/All">See all categories</option>
+                        <option value="/Food/Create">Add new food</option>
+                        <option value="/Food/All">See all foods</option>
                     </select>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
