Implement adding and listing toys

--- a/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
+++ b/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,10 @@
                         <option value="/Category/All">See all categories</option>
                         <option value="/Food/Create">Add new food</option>
                         <option value="/Food/All">See all foods</option>
+                        <option value="/Pet/Create">Add new pet</option>
+                        <option value="/Pet/All">See all pets</option>
+                        <option value="/Toy/Create">Add new toy</option>
+                        <option value="/Toy/All">See all toys</option>
                     </select>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
