--- a/PetStore/PetStore.Web/Views/Pet/All.cshtml
+++ b/PetStore/PetStore.Web/Views/Pet/All.cshtml
@@ -6,19 +6,22 @@
 
     @foreach (var item in Model.Pets)
     {
-        <tr>
-            <td>
-                @item.Category
-            </td>
-            <td>
-                @item.Breed
-            </td>
-            <td>
-                @item.Price
-            </td>
-            <td class="text-center">
-                <a href="/Pet/Delete/@item.Id" class="btn btn-danger btn-sm">Delete</a>
-            </td>
-        </tr>
+    <tr>
+        <td>
+            @item.Category
+        </td>
+        <td>
+            @item.Breed
+        </td>
+        <td>
+            @item.Price
+        </td>
+        <td class="text-center">
+            <a href="/Pet/Delete/@item.Id" class="btn btn-danger btn-sm">Delete</a>
+        </td>
+        <td class="text-center">
+            <a href="/Pet/Order/@item.Id" class="btn btn-info btn-sm">Order</a>
+        </td>
+    </tr>
     }
 </table>
