--- a/PetStore/PetStore.Web/Views/Toy/All.cshtml
+++ b/PetStore/PetStore.Web/Views/Toy/All.cshtml
@@ -6,19 +6,22 @@
 
     @foreach (var item in Model.Toys)
     {
-        <tr>
-            <td>
-                @item.Name
-            </td>
-            <td>
-                @item.Description
-            </td>
-            <td>
-                @item.Price
-            </td>
-            <td class="text-center">
-                <a href="/Toy/Delete/@item.Id" class="btn btn-danger btn-sm">Delete</a>
-            </td>
-        </tr>
+    <tr>
+        <td>
+            @item.Name
+        </td>
+        <td>
+            @item.Description
+        </td>
+        <td>
+            @item.Price
+        </td>
+        <td class="text-center">
+            <a href="/Toy/Delete/@item.Id" class="btn btn-danger btn-sm">Delete</a>
+        </td>
+        <td class="text-center">
+            <a href="/Toy/Order/@item.Id" class="btn btn-info btn-sm">Order</a>
+        </td>
+    </tr>
     }
 </table>
