--- a/PetStore/PetStore.Web/Views/Pet/Order.cshtml
+++ b/PetStore/PetStore.Web/Views/Pet/Order.cshtml
@@ -13,5 +13,5 @@
 </div>
 
 <div>
-    <a href="/Order/Create/@Model.Id" class="btn btn-danger">Yes</a> &nbsp; <a href="/" class="btn btn-info">No</a>
+    <a href="/Order/Create" class="btn btn-danger">Yes</a> &nbsp; <a href="/" class="btn btn-info">No</a>
 </div>
