Food order complete

--- a/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
+++ b/PetStore/PetStore.Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                         <option value="/Pet/All">See all pets</option>
                         <option value="/Toy/Create">Add new toy</option>
                         <option value="/Toy/All">See all toys</option>
+                        <option value="/Order/All">See your orders</option>
                     </select>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
