--- a/PetStore/PetStore.Web/Views/Food/All.cshtml
+++ b/PetStore/PetStore.Web/Views/Food/All.cshtml
@@ -22,6 +22,9 @@
         <td class="text-center">
             <a href="/Food/Delete/@item.Id" class="btn btn-danger btn-sm">Delete</a>
         </td>
+        <td class="text-center">
+            <a href="/Food/Order/@item.Id" class="btn btn-info btn-sm">Order</a>
+        </td>
     </tr>
     }
 </table>
