--- a/PetStore/PetStore.Web/Views/Order/Complete.cshtml
+++ b/PetStore/PetStore.Web/Views/Order/Complete.cshtml
@@ -1,4 +1,2 @@
-﻿toyOrdera e gotov i sega sledva....
-1 - iztrii tova i napravi commit
-2 - napravi sushtata logika za foodOrder
-3- izmisli kakvo shte se pokazva na tova view
+﻿
+<h3>Your order is complete! Have a nice day</h3>
