--- a/PetStore/PetStore.Web/Views/Order/Complete.cshtml
+++ b/PetStore/PetStore.Web/Views/Order/Complete.cshtml
@@ -1,2 +1,10 @@
-﻿
+﻿3- izmisli kakvo shte se pokazva na tova view
+        3.1 -- info za ordera (id i takiwa neshta (gledai vvideoto za da vidish ot kude da vzemesh tazi informaciq))
+4- dali trqbva ordera na food/toy da e v samite kontroleri ,a ne v orderCOntroller-a
+
+
 <h3>Your order is complete! Have a nice day</h3>
+
+<td class="text-center">
+    <a href="/" class="btn btn-info btn-sm">Back to home</a>
+</td>
