--- a/PetStore/PetStore.Web/Views/Toy/All.cshtml
+++ b/PetStore/PetStore.Web/Views/Toy/All.cshtml
@@ -2,26 +2,42 @@
 
 <h3>List of all toys</h3>
 
+<div>
+    @if (!Model.PreviousDisabled)
+    {
+        <a href="/Toy/All?page=@Model.PreviousPage" class="float-left btn btn-info">Previos</a>
+    }
+
+    @if (!Model.NextDisabled)
+    {
+        <a href="/Toy/All?page=@Model.NextPage" class="float-right btn btn-info">Next</a>
+    }
+</div>
+
+<br />
+<br />
+
+
 <table class="table table-bordered table-striped">
 
     @foreach (var item in Model.Toys)
     {
-    <tr>
-        <td>
-            @item.Name
-        </td>
-        <td>
-            @item.Description
-        </td>
-        <td>
-            @item.Price
-        </td>
-        <td class="text-center">
-            <a href="/Toy/Delete/@item.Id" class="btn btn-danger btn-sm">Delete</a>
-        </td>
-        <td class="text-center">
-            <a href="/Toy/Order/@item.Id" class="btn btn-info btn-sm">Order</a>
-        </td>
-    </tr>
+        <tr>
+            <td>
+                @item.Name
+            </td>
+            <td>
+                @item.Description
+            </td>
+            <td>
+                @item.Price
+            </td>
+            <td class="text-center">
+                <a href="/Toy/Delete/@item.Id" class="btn btn-danger btn-sm">Delete</a>
+            </td>
+            <td class="text-center">
+                <a href="/Toy/Order/@item.Id" class="btn btn-info btn-sm">Order</a>
+            </td>
+        </tr>
     }
 </table>
