--- a/PetStore/PetStore.Web/Views/Order/Complete.cshtml
+++ b/PetStore/PetStore.Web/Views/Order/Complete.cshtml
@@ -1,9 +1,17 @@
-﻿3- izmisli kakvo shte se pokazva na tova view
-        3.1 -- info za ordera (id i takiwa neshta (gledai vvideoto za da vidish ot kude da vzemesh tazi informaciq))
-4- dali trqbva ordera na food/toy da e v samite kontroleri ,a ne v orderCOntroller-a
+﻿@model PetStore.Web.ViewModels.Order.GetOrderViewModel
 
+    <h3>The following order is complete! Have a nice day</h3>
 
-<h3>Your order is complete! Have a nice day</h3>
+<div>
+    <p>@Model.Order.Id</p>
+</div>
+<div>
+    <p>@Model.Order.PurchaseDate</p>
+</div>
+<div>
+    <p>@Model.Order.Status</p>
+</div>
+
 
 <td class="text-center">
     <a href="/" class="btn btn-info btn-sm">Back to home</a>
