Show image to all toys pages

--- a/PetStore/PetStore.Web/Views/Pet/Create.cshtml
+++ b/PetStore/PetStore.Web/Views/Pet/Create.cshtml
@@ -32,6 +32,11 @@
             <input asp-for="CategoryId" type="number" class="form-control" placeholder="Category..." name="CategoryId">
             <span asp-validation-for="CategoryId" class="text-danger"></span>
         </div>
+        <br />
+        <div>
+            <input asp-for="ImageUrl" type="text" class="form-control" placeholder="ImageUrl..." name="ImageUrl">
+            <span asp-validation-for="ImageUrl" class="text-danger"></span>
+        </div>
         <hr />
 
         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
