--- a/PetStore/PetStore.Web/Views/Toy/All.cshtml
+++ b/PetStore/PetStore.Web/Views/Toy/All.cshtml
@@ -50,7 +50,7 @@
             <div class="card-body">
                 <h5 class="card-title">@item.Name</h5>
                 <p class="card-text">@item.Description</p>
-                <p class="card-text">@item.Price $</p>
+                <p class="card-text">$ @item.Price</p>
                 <a href="/Toy/Order/@item.Id" class="btn btn-primary">Order</a>
             </div>
         </div>
