--- a/PetStore/PetStore.Web/Views/Pet/Order.cshtml
+++ b/PetStore/PetStore.Web/Views/Pet/Order.cshtml
@@ -2,15 +2,15 @@
 
 <h1>Are you sure you want to buy the following pet?</h1>
 
-<div>
-    <p>@Model.Gender</p>
+<div class="col-md-4 card" style="width: 18rem;">
+    <img src="@Model.ImageUrl" class="card-img-top" alt="">
+    <div class="card-body">
+        <h5 class="card-title">@Model.Gender.ToString()</h5>
+        <p class="card-text">$ @Model.Price</p>
+        <a href="/Pet/Order/@Model.Id" class="btn btn-primary">Order</a>
+    </div>
 </div>
-<div>
-    <p>@Model.Price</p>
-</div>
-<div>
-    <p>@Model.Description</p>
-</div>
+<br />
 
 <div>
     <a href="/Order/All" class="btn btn-danger">Yes</a> &nbsp; <a href="/Pet/All" class="btn btn-info">No</a>
