--- a/PetStore/PetStore.Web/Views/_ViewImports.cshtml
+++ b/PetStore/PetStore.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PetStore.Web
 @using PetStore.Web.Models
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
