Some home page stylish

--- a/PetStore/PetStore.Web/Views/Home/Index.cshtml
+++ b/PetStore/PetStore.Web/Views/Home/Index.cshtml
@@ -2,4 +2,33 @@
     ViewData["Title"] = "Home Page";
 }
 
-    
+<!--<div class="container py-5">
+    <div class="jumbotron jumbotron-fluid overlay" style="background-image: url(https://cdn.ttgtmedia.com/visuals/ComputerWeekly/Hero%20Images/pets-cats-dogs-adobe-hero.jpg);">
+        <h2 class="mb-4">
+            Welcome to Pet Store
+        </h2>
+        <p class="mb-4">
+            Hey, check this out.
+        </p>
+        <a href="https://bootstrapious.com/snippets" class="btn btn-primary">See all pets</a>
+    </div>
+</div>-->
+<div class="bg-image"
+     style="background-image: url('https://cdn.ttgtmedia.com/visuals/ComputerWeekly/Hero%20Images/pets-cats-dogs-adobe-hero.jpg');
+            height: 50vh">
+</div>
+<hr />
+<div class="row">
+    <div class="col-md-8 offset-md-2">
+        <p class="font-weight-bold">Hey! What do you want to buy?</p>
+    </div>
+</div>
+<br />
+<div class="row">
+    <div class="col-md-8 offset-md-2">
+        <a class="btn btn-outline-primary mr-3" href="/Pet/All" role="button">Pets</a>
+        <a class="btn btn-outline-primary mr-3" href="/Food/All" role="button">Foods</a>
+        <a class="btn btn-outline-primary mr-3" href="/Toy/All" role="button">Toys</a>
+    </div>
+</div>
+
