--- a/PetStore/PetStore.Web/wwwroot/css/site.css
+++ b/PetStore/PetStore.Web/wwwroot/css/site.css
@@ -69,3 +69,7 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+.jumbotron {
+    background-image: url("../img/jumbotron_bg.jpg");
+    background-size: cover;
+}
