--- a/PetStore/PetStore.Web/Views/Pet/All.cshtml
+++ b/PetStore/PetStore.Web/Views/Pet/All.cshtml
@@ -17,30 +17,6 @@
 <br />
 <br />
 
-<table class="table table-bordered table-striped">
-
-    @foreach (var item in Model.Pets)
-    {
-        <tr>
-            <td>
-                @item.Category
-            </td>
-            <td>
-                @item.Breed
-            </td>
-            <td>
-                @item.Price
-            </td>
-            <td class="text-center">
-                <a href="/Pet/Delete/@item.Id" class="btn btn-danger btn-sm">Delete</a>
-            </td>
-            <td class="text-center">
-                <a href="/Pet/Order/@item.Id" class="btn btn-info btn-sm">Order</a>
-            </td>
-        </tr>
-    }
-</table>
-
 <div class="row">
     @foreach (var item in Model.Pets)
     {
@@ -50,7 +26,11 @@
                 <h5 class="card-title">@item.Category</h5>
                 <p class="card-text">@item.Gender.ToString()</p>
                 <p class="card-text">$ @item.Price</p>
-                <a href="/Pet/Order/@item.Id" class="btn btn-primary">Order</a>
+                <a href="/Pet/Order/@item.Id" class="btn btn-primary mr-3">Order</a>
+                @if (this.User.IsInRole("Admin"))
+                {
+                    <a href="/Pet/Delete/@item.Id" class="btn btn-danger">Delete</a>
+                }
             </div>
         </div>
     }
