--- a/PetStore/PetStore.Web/Views/Toy/All.cshtml
+++ b/PetStore/PetStore.Web/Views/Toy/All.cshtml
@@ -26,7 +26,8 @@
             <div class="card-body">
                 <h5 class="card-title">@item.Name</h5>
                 <p class="card-text">@item.Description</p>
-                <p class="card-text">$ @item.Price</p>
+                <i class="fa-solid fa-dollar-sign">@item.Price</i>
+                <hr />
                 <a href="/Toy/Order/@item.Id" class="btn btn-primary mr-3">Order</a>
                 @if (this.User.IsInRole("Admin"))
                 {
